--- a/templates/presentation_preview.html
+++ b/templates/presentation_preview.html
@@ -12,15 +12,12 @@
             margin-bottom: 10px;
         }
         .buttons {
-    position: fixed;
     bottom: 20px;
     left: 50%;
-    transform: translateX(-50%);
     display: flex;
     justify-content: space-between;
     width: 60%; /* Adjust the width as needed */
     max-width: 400px; /* Optionally limit the max width */
-    z-index: 10; /* Ensure the buttons stay on top of other content */
 }
 
 .back-button, #submit-btn {
@@ -40,15 +37,12 @@
     background-color: #008CBA;
 }
 .buttons {
-    position: fixed;
     bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
+
     display: flex;
     justify-content: space-between;
     width: 60%; /* Adjust the width as needed */
     max-width: 400px; /* Optionally limit the max width */
-    z-index: 10; /* Ensure the buttons stay on top of other content */
 }
 
 .back-button, #submit-btn {
@@ -61,11 +55,14 @@
 }
 
 .back-button {
-    background-color: #4CAF50;
+    background-color: #008CBA;
+   
+    margin-left: 5px !important;
 }
 
 #submit-btn {
-    background-color: #008CBA;
+    background-color: #4CAF50;
+    margin-left: -180px !important;
 }
 
 
