--- a/static/css/items_ppst.css
+++ b/static/css/items_ppst.css
@@ -1,5 +1,5 @@
 body {
-    margin: 0;
+    margin: 20px;
     padding: 0;
     font-family: Arial, sans-serif;
     /* Pastel yellow background */
@@ -37,12 +37,12 @@ table {
 th,
 td {
     padding: 10px;
-    border: 1px solid  #9ad34a;
+    border: 1px solid  #4ad39e;
     text-align: left;
 }
 
 th {
-    background-color: #b7ff53;
+    background-color: #53ffff;
     /* Light pastel yellow */
     color: #444;
     font-weight: bold;
@@ -52,7 +52,7 @@ td input[type="text"],
 td input[type="number"] {
     width: 100%;
     padding: 8px;
-    border: 1px solid #9ad34a;
+    border: 1px solid #4ad3b5;
     border-radius: 4px;
     box-sizing: border-box;
     font-size: 14px;
@@ -68,7 +68,7 @@ button {
     padding: 10px 15px;
     font-size: 14px;
     color: #fff;
-    background-color: #8ad620;
+    background-color: #20d6a8;
     /* Warm pastel orange */
     border: none;
     border-radius: 4px;
@@ -78,17 +78,17 @@ button {
 }
 
 button:hover {
-    background-color: #9ad34a;
+    background-color: #4ad3b1;
     /* Slightly darker on hover */
 }
 
 a {
-    color: #a9ec4b;
+    color: #4becc9;
     text-decoration: none;
     font-weight: bold;
     transition: color 0.3s;
 }
 
 a:hover {
-    color: #c1fd6e;
+    color: #6efdc1;
 }
