--- a/templates/edit_presentation.html
+++ b/templates/edit_presentation.html
@@ -8,7 +8,7 @@
         * {
             margin: 20px;
         }
-
+    
         input,
         textarea {
             width: 100%; /* Ensures it takes full width of the container */
@@ -28,7 +28,7 @@
             overflow: auto; /* Handles overflow gracefully */
             transition: border-color 0.3s, box-shadow 0.3s;
         }
-
+    
         input:focus,
         textarea:focus {
             border-color: #007bff;
@@ -36,13 +36,28 @@
             box-shadow: 0 0 5px rgba(0, 123, 255, 0.3);
             background-color: #fff;
         }
-
+    
         button {
             color: aliceblue;
             margin-left: 20px;
         }
     </style>
     <script>
+        // Function to add a new item row
+
+        function addItemRow() {
+            const itemsTable = document.getElementById("itemsTable");
+            const rowIndex = itemsTable.rows.length - 1; // Adjusting for the header row
+            const newRow = itemsTable.insertRow(rowIndex);
+            newRow.innerHTML = `
+            <td><input type="text" name="items[${rowIndex}][item_name]" placeholder="Item Name"></td>
+            <td><input type="number" name="items[${rowIndex}][quantity]" placeholder="Quantity"></td>
+            <td><input type="number" name="items[${rowIndex}][price_per_unit]" placeholder="Price per unit"></td>
+            <td><input type="number" name="items[${rowIndex}][total_price]" placeholder="Total Price"></td>
+            <td><button type="button" onclick="removeRow(this)">Remove</button></td>
+        `;
+        }
+
         // Function to add a new round row
         function addRoundRow() {
             const roundsTable = document.getElementById("roundsTable");
@@ -51,6 +66,7 @@
             newRow.innerHTML = `
                 <td><input type="text" name="rounds[${rowIndex}][time]" placeholder="Round Time"></td>
                 <td><textarea name="rounds[${rowIndex}][description]" placeholder="Round Description"></textarea></td>
+                
                 <td><button type="button" onclick="removeRow(this)">Remove</button></td>
             `;
         }
@@ -72,27 +88,28 @@
     {% elif presentation %}
     <form action="/save_presentation" method="POST">
         <table>
+            
+
             <!-- Association and Presentation Details -->
             <tr>
                 <td><strong>Association Name</strong></td>
                 <td><input type="text" name="association_name" value="{{presentation.association_name }}"></td>
             </tr>
             <tr>
-                <td><strong>Presnetation ID</strong></td>
+                <td><strong>Presentation ID</strong></td>
                 <td><input type="text" name="presentation_id" value="{{ presentation.presentation_id }}" readonly></td>
             </tr>
             <tr>
-                <td><strong>Presnetation Name</strong></td>
+                <td><strong>Presentation Name</strong></td>
                 <td><input type="text" name="presentation_name" value="{{ presentation.presentation_name }}"></td>
             </tr>
 
+
             <!-- Details Section -->
             <tr>
-                <br>
-                <td><strong>Details</strong></td>
-                <td>
+               
                     <table>
-                        
+                       
                         {% for key, value in presentation.details.items() %}
                         <tr>
                             <td>{{ key.replace('_', ' ') | title }}</td>
@@ -100,10 +117,11 @@
                         </tr>
                         {% endfor %}
                     </table>
-                </td>
+                
             </tr>
 
             <!-- Presentation Information -->
+            <table>
             <tr>
                 <td><strong>Event Description</strong></td>
                 <td><textarea name="event_description">{{ presentation.presentation.event_description }}</textarea></td>
@@ -118,41 +136,50 @@
             </tr>
             <tr>
                
-                <td>
                     <table id="roundsTable">
                         <tr>
                             <th>Round Time</th>
                             <th>Round Description</th>
                             <th>Actions</th>
+
                         </tr>
                         {% for round in presentation.presentation.rounds %}
                         <tr>
                             <td><input type="text" name="rounds[{{ loop.index0 }}][time]" value="{{ round.time }}"></td>
-                            <td><textarea name="rounds[{{ loop.index0 }}][description]">{{ round.description }}</textarea></td>
+                            <td><textarea
+                                    name="rounds[{{ loop.index0 }}][description]">{{ round.description }}</textarea>
+                            </td>
+
                             <td><button type="button" onclick="removeRow(this)">Remove</button></td>
                         </tr>
                         {% endfor %}
                     </table>
                     <button type="button" onclick="addRoundRow()">Add Round</button>
-                </td>
+               
             </tr>
-
+             </table>
             <!-- Form Details -->
             <tr>
-                <td><strong>Form</strong>
-                <td>
+                
                     <table>
+                        
+
                         <!-- Specific Day Field -->
-                        {% set dayMapping = {'day_1': 'Day 1', 'day_2': 'Day 2', 'day_3': 'Day 3', 'two_days': 'Two Days'} %}
+                        {% set dayMapping = {'day_1': 'Day 1', 'day_2': 'Day 2', 'day_3': 'Day 3', 'two_days': 'Two
+                        Days'} %}
                         {% set selectedDay = dayMapping.get(presentation.form.day, 'N/A') %}
                         <tr>
                             <td>Day</td>
                             <td>
                                 <select name="form[day]">
-                                    <option value="day_1" {% if selectedDay=='Day 1' %}selected{% endif %}>Day 1</option>
-                                    <option value="day_2" {% if selectedDay=='Day 2' %}selected{% endif %}>Day 2</option>
-                                    <option value="day_3" {% if selectedDay=='Day 3' %}selected{% endif %}>Day 3</option>
-                                    <option value="two_days" {% if selectedDay=='Two Days' %}selected{% endif %}>Two Days</option>
+                                    <option value="day_1" {% if selectedDay=='Day 1' %}selected{% endif %}>Day 1
+                                    </option>
+                                    <option value="day_2" {% if selectedDay=='Day 2' %}selected{% endif %}>Day 2
+                                    </option>
+                                    <option value="day_3" {% if selectedDay=='Day 3' %}selected{% endif %}>Day 3
+                                    </option>
+                                    <option value="two_days" {% if selectedDay=='Two Days' %}selected{% endif %}>Two
+                                        Days</option>
                                 </select>
                             </td>
                         </tr>
@@ -161,14 +188,44 @@
                         {% for key, value in presentation.form.items() %}
                         {% if key != 'day' %}
                         <tr>
-                            <td>{{ key.replace('_', ' ') | title }}</td>
+                            
+                            <td >{{ key.replace('_', ' ') | title }}</td>
                             <td><input type="text" name="form[{{ key }}]" value="{{ value }}"></td>
                         </tr>
                         {% endif %}
                         {% endfor %}
                     </table>
+               
+            </tr>
+            <tr>
+                <td>
+                    <table id="itemsTable">
+                        <tr>
+                            <th>Item Name</th>
+                            <th>Quantity</th>
+                            <th>Price per unit</th>
+                            <th>Total price</th>
+                            <th>Actions</th>
+                        </tr>
+                        {% for item in presentation['items'] %}
+                        <tr>
+                            <td><input type="text" name="items[{{ loop.index0 }}][item_name]"
+                                    value="{{ item['item_name'] }}"></td>
+                            <td><input type="number" name="items[{{ loop.index0 }}][quantity]"
+                                    value="{{ item['quantity'] }}">
+                            </td>
+                            <td><input type="number" name="items[{{ loop.index0 }}][price_per_unit]"
+                                    value="{{ item['price_per_unit'] }}"></td>
+                            <td><input type="number" name="items[{{ loop.index0 }}][total_price]"
+                                    value="{{ item['total_price'] }}"></td>
+                            <td><button type="button" onclick="removeRow(this)">Remove</button></td>
+                        </tr>
+                        {% endfor %}
+                    </table>
+                    <button type="button" onclick="addItemRow()">Add Item</button>
                 </td>
             </tr>
+
         </table>
 
         <!-- Submit Button -->
@@ -176,6 +233,7 @@
     </form>
     {% else %}
     <p>No event found.</p>
+
     {% endif %}
 </body>
 
