--- a/templates/presentation.html
+++ b/templates/presentation.html
@@ -168,10 +168,16 @@
                     <td colspan="4"><input type="text" name="extension_box_reason" placeholder="Justify the reason"
                             required></td>
                 </tr>
-
+                <tr>
+                    <th colspan="4">Extension Box</th>
+                </tr>
+                <tr>
+                    <td colspan="4"><input type="text" name="extension_box" placeholder="Extension box"
+                            required></td>
+                </tr>
                 <!-- Submit Button -->
                 <tr>
-                    <td colspan="4"><button type="submit">Save Event Details</button></td>
+                    <td colspan="4"><button type="submit" style="background-color: rgb(2, 143, 131);">Save Event Details</button></td>
                 </tr>
             </table>
         </form>
