--- a/templates/workshop_search.html
+++ b/templates/workshop_search.html
@@ -1,105 +1,111 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Workshop Details</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/preview.css') }}">
 </head>
+
 <body>
     <div class="container">
         <h1>Workshop Details</h1>
 
         {% if error %}
-            <p style="color: red;">{{ error }}</p>
-            <a href="/workshop_search">Back to Search</a>
+        <p style="color: red;">{{ error }}</p>
+        <a href="/workshop_search">Back to Search</a>
         {% elif workshop %}
-            <table>
-                <tr>
-                    <td><strong>Association Name</strong></td>
-                    <td>{{ workshop.association_name }}</td>
-                </tr>
-                <tr>
-                    <td><strong>Workshop Name</strong></td>
-                    <td>{{ workshop.workshop_name }}</td>
-                </tr>
-                <tr>
-                    <td><strong>Description</strong></td>
-                    <td>{{ workshop.workshop.description }}</td>
-                </tr>
-                <tr>
-                    <td><strong>Prerequisites</strong></td>
-                    <td>{{ workshop.workshop.prerequisites }}</td>
-                </tr>
-                <tr>
-                    <td><strong>Session Count</strong></td>
-                    <td>{{ workshop.workshop.session_count }}</td>
-                </tr>
-            </table>
+        <table>
+            <tr>
+                <td><strong>Association Name</strong></td>
+                <td>{{ workshop.association_name }}</td>
+            </tr>
+            <tr>
+                <td><strong>Workshop Name</strong></td>
+                <td>{{ workshop.workshop_name }}</td>
+            </tr>
+            <tr>
+                <td><strong>Description</strong></td>
+                <td>{{ workshop.workshop.description }}</td>
+            </tr>
+            <tr>
+                <td><strong>Prerequisites</strong></td>
+                <td>{{ workshop.workshop.prerequisites }}</td>
+            </tr>
+            <tr>
+                <td><strong>Session Count</strong></td>
+                <td>{{ workshop.workshop.session_count }}</td>
+            </tr>
+        </table>
 
-            <!-- Display Sessions -->
-            <table>
-                <tr>
-                    <th><strong>Session Time</strong></th>
-                    <th><strong>Session Topic</strong></th>
-                    <th><strong>Session Description</strong></th>
-                </tr>
-                {% for session in workshop.workshop.sessions %}
-                <tr>
-                    <td>{{ session.session_time }}</td>
-                    <td>{{ session.session_topic }}</td>
-                    <td>{{ session.session_description }}</td>
-                </tr>
-                {% endfor %}
-            </table>
+        <!-- Display Sessions -->
+        <table>
+            <tr>
+                <th><strong>Session Time</strong></th>
+                <th><strong>Session Topic</strong></th>
+                <th><strong>Session Description</strong></th>
+            </tr>
+            {% for session in workshop.workshop.sessions %}
+            <tr>
+                <td>{{ session.session_time }}</td>
+                <td>{{ session.session_topic }}</td>
+                <td>{{ session.session_description }}</td>
+            </tr>
+            {% endfor %}
+        </table>
 
-            {% if workshop.details %}
-            <table>
-                {% for key, value in workshop.details.items() %}
-                <tr>
-                    <td>{{ key.replace('_', ' ') | title }}</td>
-                    <td>{{ value }}</td>
-                </tr>
-                {% endfor %}
-            </table>
+        {% if workshop.details %}
+        <table>
+            {% for key, value in workshop.details.items() %}
+            {% if key != 'speaker_signature' %}
+            <tr>
+                <td>{{ key.replace('_', ' ') | title }}</td>
+                <td>{{ value }}</td>
+            </tr>
             {% endif %}
+            {% endfor %}
+        </table>
+        {% endif %}
 
-            <!-- Display Form Details -->
-            <table>
-                {% set dayMapping = {'day_1': 'Day 1', 'day_2': 'Day 2', 'day_3': 'Day 3', 'two_days': 'Two Days'} %}
-                {% for key, value in workshop.form.items() %}
-                    {% if value and key not in dayMapping %}
-                    <tr>
-                        <td>{{ key.replace('_', ' ') | title }}</td>
-                        <td>{{ value }}</td>
-                    </tr>
-                    {% endif %}
-                {% endfor %}
-            </table>
+        <!-- Display Form Details -->
+        <table>
+            {% set dayMapping = {'day_1': 'Day 1', 'day_2': 'Day 2', 'day_3': 'Day 3', 'two_days': 'Two Days'} %}
+            {% for key, value in workshop.form.items() %}
+            {% if value and key not in dayMapping %}
+            <tr>
+                <td>{{ key.replace('_', ' ') | title }}</td>
+                <td>{{ value }}</td>
+            </tr>
+            {% endif %}
+            {% endfor %}
+        </table>
 
-            <!-- Display Items -->
-            <table>
-                <tr>
-                    <th><strong>Item Name</strong></th>
-                    <th><strong>Quantity</strong></th>
-                </tr>
-                {% for item in workshop['items'] %}
-                <tr>
-                    <td>{{ item['item_name'] }}</td>
-                    <td>{{ item['quantity'] }}</td>
-                </tr>
-                {% endfor %}
-            </table>
+        <!-- Display Items -->
+        <table>
+            <tr>
+                <th><strong>Item Name</strong></th>
+                <th><strong>Quantity</strong></th>
+            </tr>
+            {% for item in workshop['items'] %}
+            <tr>
+                <td>{{ item['item_name'] }}</td>
+                <td>{{ item['quantity'] }}</td>
+            </tr>
+            {% endfor %}
+        </table>
 
-            <!-- Download PDF Button -->
-            <form action="/download_pdf1" method="get">
-                <input type="hidden" name="workshop_id" value="{{ workshop.workshop_id }}">
-                <button type="submit" class="button" style="color: aliceblue;">Download PDF</button>
-                <a href="/workshop_search" style="margin-left: 10px;color: rgb(224, 101, 0);font-weight: bold;">Search Again</a>
-            </form>
+        <!-- Download PDF Button -->
+        <form action="/download_pdf1" method="get">
+            <input type="hidden" name="workshop_id" value="{{ workshop.workshop_id }}">
+            <button type="submit" class="button" style="color: aliceblue;">Download PDF</button>
+            <a href="/workshop_search" style="margin-left: 10px;color: rgb(224, 101, 0);font-weight: bold;">Search
+                Again</a>
+        </form>
 
         {% else %}
-            <p>No data to display.</p>
-            <a href="/workshop_search">Back to Search</a>
+        <p>No data to display.</p>
+        <a href="/workshop_search">Back to Search</a>
         {% endif %}
     </div>
 </body>
+
 </html>
