--- a/templates/workshop_start.html
+++ b/templates/workshop_start.html
@@ -71,13 +71,13 @@
 <body>
     <div class="container">
         <!-- PSG College Logo -->
-        <img src="http://localhost:5000/static/images/psg.png" alt="PSG Logo" class="logo" style="margin-top: 40px;width: 200px;height: 50px ;">
+        <img src="../static/images/psg.png" alt="PSG Logo" class="logo" style="margin-top: 40px;width: 200px;height: 50px ;">
 
         <!-- College Name and Union -->
         <h2>Students Union 2024-25</h2>
 
         <!-- KRIYA Logo -->
-        <img src="http://localhost:5000/static/images/kriya.png" alt="KRIYA Logo" class="kriya-logo">
+        <img src="../static/images/kriya.png" alt="KRIYA Logo" class="kriya-logo">
 
         <!-- KRIYA Subtitle -->
         <p class="sub-text" style="font-weight: bold; font-size:xx-large;margin-top: -20px;">The Global Clash of Techno Talentz</p>
