--- a/static/css/items_ppst.css
+++ b/static/css/items_ppst.css
@@ -37,12 +37,12 @@ table {
 th,
 td {
     padding: 10px;
-    border: 1px solid  #4ad39e;
+    border: 1px solid  #d9f7be;
     text-align: left;
 }
 
 th {
-    background-color: #53ffff;
+    background-color: #d9f7be;
     /* Light pastel yellow */
     color: #444;
     font-weight: bold;
@@ -52,7 +52,7 @@ td input[type="text"],
 td input[type="number"] {
     width: 100%;
     padding: 8px;
-    border: 1px solid #4ad3b5;
+    border: 1px solid #d9f7be;
     border-radius: 4px;
     box-sizing: border-box;
     font-size: 14px;
@@ -68,7 +68,7 @@ button {
     padding: 10px 15px;
     font-size: 14px;
     color: #fff;
-    background-color: #20d6a8;
+    background-color: #d9f7be;
     /* Warm pastel orange */
     border: none;
     border-radius: 4px;
@@ -78,17 +78,17 @@ button {
 }
 
 button:hover {
-    background-color: #4ad3b1;
+    background-color: #d9f7be;
     /* Slightly darker on hover */
 }
 
 a {
-    color: #4becc9;
+    color: #d9f7be;
     text-decoration: none;
     font-weight: bold;
     transition: color 0.3s;
 }
 
 a:hover {
-    color: #6efdc1;
+    color: #d9f7be;
 }
