--- a/templates/event_start.html
+++ b/templates/event_start.html
@@ -78,7 +78,7 @@
         <h2>Students Union 2024-25</h2>
 
         <!-- KRIYA Logo -->
-        <img src="http://localhost:5001/static/images/kriya.png" alt="KRIYA Logo" class="kriya-logo">
+        <img src="/static/images/kriya.png" alt="KRIYA Logo" class="kriya-logo">
 
         <!-- KRIYA Subtitle -->
         <p class="sub-text" style="font-weight: bold; font-size:xx-large;margin-top: -20px;">The Global Clash of Techno Talentz</p>
