--- a/templates/event_preview.html
+++ b/templates/event_preview.html
@@ -51,7 +51,7 @@
 
         th,
         td {
-            border: 1px solid #ffffff;
+            border: 1px solid #000000;
             padding: 8px 10px;
             /* Reduce padding */
             text-align: left;
