--- a/templates/event_start.html
+++ b/templates/event_start.html
@@ -86,11 +86,11 @@
         <!-- Event Details -->
         <h3>KRIYA 2K25</h3>
         <h3>Event Resource Form</h3>
-        <h3>Workshops</h3>
+        <h3>Events</h3>
     </div>
     <div class="details">
         <p><span>ASSOCIATION NAME</span> : {{ association_name }}</p>
-        <p><span>WORKSHOP NAME</span> : {{event_name }}</p>
+        <p><span>EVENT NAME</span> : {{event_name }}</p>
     </div>
 </body>
 
