--- a/templates/workshop_start.html
+++ b/templates/workshop_start.html
@@ -71,7 +71,7 @@
 <body>
     <div class="container">
         <!-- PSG College Logo -->
-        <img src="/static/images/psg.png" alt="PSG Logo" class="logo" style="margin-top: 40px;width: 200px;height: 50px ;">
+        <img src="/static/images/kriya.png" alt="PSG Logo" class="logo" style="margin-top: 40px;width: 200px;height: 50px ;">
 
         <!-- College Name and Union -->
         <h2>Students Union 2024-25</h2>
