--- a/templates/event_preview.html
+++ b/templates/event_preview.html
@@ -65,7 +65,7 @@
         }
 
         td {
-            background-color: #fafafa;
+            background-color: #ffffff;
         }
 
         .container {
