--- a/templates/items.html
+++ b/templates/items.html
@@ -124,7 +124,7 @@
 
             // Save the items to localStorage
             localStorage.setItem("items", JSON.stringify(items));
-            alert("Items saved to localStorage successfully!");
+            // alert("Items saved to localStorage successfully!");
 
 
             window.location.href = './event_summary';  // Redirect to the summary page
