--- a/templates/items_ppst.html
+++ b/templates/items_ppst.html
@@ -155,7 +155,7 @@
 
             // Save the items to localStorage
             localStorage.setItem("presentationItems", JSON.stringify(presentationItems));
-            alert("Items saved to localStorage successfully!");
+            // alert("Items saved to localStorage successfully!");
 
             window.location.href = './presentation_form';  // Redirect to the workshop summary page
         });
