--- a/templates/presentation.html
+++ b/templates/presentation.html
@@ -52,7 +52,7 @@
 
                 // Save the form data to localStorage
                 localStorage.setItem('presentationFormData', JSON.stringify(formData));
-                alert('Form submitted successfully!');
+                // alert('Form submitted successfully!');
                 window.location.href = './items_ppst'; // Adjust as needed
             });
 
@@ -172,12 +172,12 @@
                     <th colspan="4">Extension Box</th>
                 </tr>
                 <tr>
-                    <td colspan="4"><input type="text" name="extension_box" placeholder="Extension box"
-                            required></td>
+                    <td colspan="4"><input type="text" name="extension_box" placeholder="Extension box" required></td>
                 </tr>
                 <!-- Submit Button -->
                 <tr>
-                    <td colspan="4"><button type="submit" style="background-color: rgb(2, 143, 131);">Save Event Details</button></td>
+                    <td colspan="4"><button type="submit" style="background-color: rgb(2, 143, 131);">Save Event
+                            Details</button></td>
                 </tr>
             </table>
         </form>
