--- a/templates/workshop.html
+++ b/templates/workshop.html
@@ -98,7 +98,7 @@
                 });
 
                 localStorage.setItem('workshopFormData', JSON.stringify(formData));
-                alert('Form submitted successfully!');
+                // alert('Form submitted successfully!');
                 window.location.href = './items_ws'; // Redirect to the items page after form submission
             });
 
