--- a/templates/items_ws.html
+++ b/templates/items_ws.html
@@ -155,7 +155,7 @@
 
             // Save the items to localStorage
             localStorage.setItem("workshopItems", JSON.stringify(workshopItems));
-            alert("Items saved to localStorage successfully!");
+            // alert("Items saved to localStorage successfully!");
 
             window.location.href = './workshop_summary';  // Redirect to the workshop summary page
         });
