--- a/templates/workshop_detail.html
+++ b/templates/workshop_detail.html
@@ -82,7 +82,7 @@
 
 
                 localStorage.setItem('workshopDetails', JSON.stringify(workshopDetails));
-                alert('Workshop details saved successfully!');
+                // alert('Workshop details saved successfully!');
                 // Navigate to the next page (workshop.html)
                 window.location.href = './workshop';
             } catch (e) {
