--- a/templates/event_start.html
+++ b/templates/event_start.html
@@ -53,14 +53,16 @@
         }
 
         .kriya-logo {
-            width: 200px;
-            margin: 2px auto;
+            width: 300px;
+            height: 300px;
+            margin: 0 auto;
+            margin-bottom: -20px !important;
         }
 
         .sub-text {
             font-style: italic;
             font-size: 14px;
-            margin-top: -20px !important;
+            margin-top: -40px !important;
         }
 
         .details {
