--- a/static/css/event_info.css
+++ b/static/css/event_info.css
@@ -51,7 +51,7 @@ body {
     width: 95%;
     padding: 12px;
     border: 1px solid #f1c54c;
-    background: #fdfaeb;
+    background: #faf9f4;
     border-radius: 8px;
     font-size: 14px;
     outline: none;
@@ -66,7 +66,7 @@ body {
 .btn {
     width: 100%;
     padding: 12px;
-    background: linear-gradient(135deg, #f9a825, #f57f17);
+    background: linear-gradient(135deg, #f7bb5a, #f57f17);
     color: #fff;
     border: none;
     border-radius: 8px;
