--- a/static/css/event_info.css
+++ b/static/css/event_info.css
@@ -48,7 +48,7 @@ body {
 }
 
 .form-group input {
-    width: 95%;
+    width: 93%;
     padding: 12px;
     border: 1px solid #f1c54c;
     background: #faf9f4;
@@ -57,7 +57,16 @@ body {
     outline: none;
     transition: border-color 0.3s ease, box-shadow 0.3s ease;
 }
-
+.dropdown-containe input{
+    width: 93%;
+    padding: 12px;
+    border: 1px solid #f1c54c;
+    background: #faf9f4;
+    border-radius: 8px;
+    font-size: 14px;
+    outline: none;
+    transition: border-color 0.3s ease, box-shadow 0.3s ease;
+}
 .form-group input:focus {
     border-color: #f9a825;
     box-shadow: 0 0 8px rgba(249, 168, 37, 0.3);
